feat: support refactor-request label