@@ -24,7 +24,8 @@ import java.util.stream.Collectors;
 public class GithubHandler {
     private static GitHub GITHUB;
 
-    public static final Pattern CONTRIBUTOR_CREDITS_PR = Pattern.compile("Add .* as a contributor.*", Pattern.CASE_INSENSITIVE);
+    public static final Pattern CONTRIBUTOR_CREDITS_PR = Pattern.compile("Add .* as a contributor.*",
+            Pattern.CASE_INSENSITIVE);
 
     public static void init(String githubToken) {
         try {
@@ -43,15 +44,18 @@ public class GithubHandler {
     }
 
     public static RepoData getRepoData(ServerConfig serverConfig) {
-        if (GITHUB==null) return null;
+        if (GITHUB == null)
+            return null;
         try {
             long timestamp = new Date().getTime() / 1000;
             GHRateLimit rateLimit = GITHUB.getRateLimit();
-            Main.LOGGER.info("Ratelimits for {}-{}: {}/{} - resets at {}", serverConfig.server_id.asString(), serverConfig.repo_name, rateLimit.getRemaining(), rateLimit.getLimit(), rateLimit.getResetDate());
+            Main.LOGGER.info("Ratelimits for {}-{}: {}/{} - resets at {}", serverConfig.server_id.asString(),
+                    serverConfig.repo_name, rateLimit.getRemaining(), rateLimit.getLimit(), rateLimit.getResetDate());
             GHRepository repository = GITHUB.getRepository(serverConfig.repo_name);
             GHLabel confirmedLabel = repository.getLabel("status: confirmed");
             GHLabel unconfirmedLabel = repository.getLabel("status: unconfirmed");
             GHLabel featureRequestLabel = repository.getLabel("feature-request");
+            GHLabel refactorLabel = repository.getLabel("refactor-request");
 
             Main.LOGGER.debug("Starting to fetch issues");
             List<GHIssue> allList = repository.getIssues(GHIssueState.ALL)
@@ -60,13 +64,15 @@ public class GithubHandler {
                     .toList();
 
             Main.LOGGER.debug("Starting to filter issues");
-            List<GHIssue> openIssueList = allList.stream().filter(issue -> !issue.isPullRequest() && issue.getState()==GHIssueState.OPEN).sorted((issue, t1) -> {
-                try {
-                    return issue.getUpdatedAt().compareTo(t1.getUpdatedAt());
-                } catch (IOException e) {
-                    return 0;
-                }
-            }).toList();
+            List<GHIssue> openIssueList = allList.stream()
+                    .filter(issue -> !issue.isPullRequest() && issue.getState() == GHIssueState.OPEN)
+                    .sorted((issue, t1) -> {
+                        try {
+                            return issue.getUpdatedAt().compareTo(t1.getUpdatedAt());
+                        } catch (IOException e) {
+                            return 0;
+                        }
+                    }).toList();
             List<GHIssue> recentIssueList = openIssueList.stream().sorted((t1, issue) -> {
                 try {
                     return issue.getCreatedAt().compareTo(t1.getCreatedAt());
@@ -74,12 +80,18 @@ public class GithubHandler {
                     return 0;
                 }
             }).toList();
-            int confirmedBugs = openIssueList.stream().filter(issue -> issue.getLabels().contains(confirmedLabel)).toList().size();
-            int unconfirmedBugs = openIssueList.stream().filter(issue -> issue.getLabels().contains(unconfirmedLabel)).toList().size();
-            int featureRequests = openIssueList.stream().filter(issue -> issue.getLabels().contains(featureRequestLabel)).toList().size();
+            int confirmedBugs = openIssueList.stream().filter(issue -> issue.getLabels().contains(confirmedLabel))
+                    .toList().size();
+            int unconfirmedBugs = openIssueList.stream().filter(issue -> issue.getLabels().contains(unconfirmedLabel))
+                    .toList().size();
+            int refactorRequests = openIssueList.stream().filter(issue -> issue.getLabels().contains(refactorLabel))
+                    .toList().size();
+            int featureRequests = openIssueList.stream()
+                    .filter(issue -> issue.getLabels().contains(featureRequestLabel)).toList().size();
 
             Main.LOGGER.debug("Starting to fetch PRs");
-            List<GHPullRequest> openPRList = repository.queryPullRequests().state(GHIssueState.OPEN).sort(GHPullRequestQueryBuilder.Sort.UPDATED).list().toList()
+            List<GHPullRequest> openPRList = repository.queryPullRequests().state(GHIssueState.OPEN)
+                    .sort(GHPullRequestQueryBuilder.Sort.UPDATED).list().toList()
                     .parallelStream()
                     .filter(pr -> !CONTRIBUTOR_CREDITS_PR.matcher(pr.getTitle()).matches())
                     .toList();
@@ -108,73 +120,93 @@ public class GithubHandler {
                                     Color.of(0, 176, 244),
                                     Section.of(
                                             Thumbnail.of(UnfurledMediaItem.of("https://i.imgur.com/tyFU3UJ.png")),
-                                            TextDisplay.of("## [Expansion Issue Report](https://github.com/rh-hideout/pokeemerald-expansion/issues?q=is%3Aopen)"),
+                                            TextDisplay.of(
+                                                    "## [Expansion Issue Report](https://github.com/rh-hideout/pokeemerald-expansion/issues?q=is%3Aopen)"),
                                             TextDisplay.of("**RAW STATS**"),
-                                            TextDisplay.of(String.format("* [%d Issues](https://github.com/rh-hideout/pokeemerald-expansion/issues) ([%d Confirmed Bugs](https://github.com/rh-hideout/pokeemerald-expansion/issues?q=is%%3Aissue+is%%3Aopen+label%%3A\"status%%3A+confirmed\") / [%d Unconfirmed Bugs](https://github.com/rh-hideout/pokeemerald-expansion/issues?q=is%%3Aissue+is%%3Aopen+label%%3A\"status%%3A+unconfirmed\") / [%d Feature Requests](https://github.com/rh-hideout/pokeemerald-expansion/issues?q=is%%3Aissue+is%%3Aopen+label%%3Afeature-request)) \n* [%d Pull Requests](https://github.com/rh-hideout/pokeemerald-expansion/pulls?q=is%%3Apr+is%%3Aopen) ([%d Ready for Review](https://github.com/rh-hideout/pokeemerald-expansion/pulls?q=is%%3Apr+is%%3Aopen+draft%%3Afalse) / [%d Draft](https://github.com/rh-hideout/pokeemerald-expansion/pulls?q=is%%3Apr+is%%3Aopen+draft%%3Atrue))",
-                                                    openIssueList.size(), confirmedBugs, unconfirmedBugs, featureRequests,
-                                                    openPRList.size(), readyForReviewPRList.size(), draftPR
-                                            ))
-                                    ),
+                                            TextDisplay.of(String.format(
+                                                    "* [%d Issues](https://github.com/rh-hideout/pokeemerald-expansion/issues) ([%d Confirmed Bugs](https://github.com/rh-hideout/pokeemerald-expansion/issues?q=is%%3Aissue+is%%3Aopen+label%%3A\"status%%3A+confirmed\") / [%d Unconfirmed Bugs](https://github.com/rh-hideout/pokeemerald-expansion/issues?q=is%%3Aissue+is%%3Aopen+label%%3A\"status%%3A+unconfirmed\") / [%d Feature Requests](https://github.com/rh-hideout/pokeemerald-expansion/issues?q=is%%3Aissue+is%%3Aopen+label%%3Afeature-request)) / [%d Refactor Requests](https://github.com/rh-hideout/pokeemerald-expansion/issues?q=is%%3Aissue+is%%3Aopen+label%%3Arefactor-request))  \n* [%d Pull Requests](https://github.com/rh-hideout/pokeemerald-expansion/pulls?q=is%%3Apr+is%%3Aopen) ([%d Ready for Review](https://github.com/rh-hideout/pokeemerald-expansion/pulls?q=is%%3Apr+is%%3Aopen+draft%%3Afalse) / [%d Draft](https://github.com/rh-hideout/pokeemerald-expansion/pulls?q=is%%3Apr+is%%3Aopen+draft%%3Atrue))",
+                                                    openIssueList.size(), confirmedBugs, unconfirmedBugs,
+                                                    featureRequests, refactorRequests,
+                                                    openPRList.size(), readyForReviewPRList.size(), draftPR))),
                                     Separator.of(Separator.SpacingSize.SMALL),
                                     TextDisplay.of("**STALES**"),
-                                    TextDisplay.of(String.format("**[Pull Requests](https://github.com/rh-hideout/pokeemerald-expansion/pulls?q=is%%3Apr+is%%3Aopen+draft%%3Afalse+sort%%3Aupdated-asc)**%s%s%s",
+                                    TextDisplay.of(String.format(
+                                            "**[Pull Requests](https://github.com/rh-hideout/pokeemerald-expansion/pulls?q=is%%3Apr+is%%3Aopen+draft%%3Afalse+sort%%3Aupdated-asc)**%s%s%s",
                                             renderStaleIssue(readyForReviewPRList.get(0)),
                                             renderStaleIssue(readyForReviewPRList.get(1)),
-                                            renderStaleIssue(readyForReviewPRList.get(2))
-                                    )),
-                                    TextDisplay.of(String.format("**[Issues](https://github.com/rh-hideout/pokeemerald-expansion/issues?q=is%%3Aopen+sort%%3Aupdated-asc)**%s%s%s",
+                                            renderStaleIssue(readyForReviewPRList.get(2)))),
+                                    TextDisplay.of(String.format(
+                                            "**[Issues](https://github.com/rh-hideout/pokeemerald-expansion/issues?q=is%%3Aopen+sort%%3Aupdated-asc)**%s%s%s",
                                             renderStaleIssue(openIssueList.get(0)),
                                             renderStaleIssue(openIssueList.get(1)),
-                                            renderStaleIssue(openIssueList.get(2))
-                                    )),
+                                            renderStaleIssue(openIssueList.get(2)))),
                                     Separator.of(Separator.SpacingSize.SMALL),
                                     TextDisplay.of("**LAST CREATED**"),
-                                    TextDisplay.of(String.format("**[Pull Requests](https://github.com/rh-hideout/pokeemerald-expansion/pulls?q=is%%3Apr+is%%3Aopen+sort%%3Acreated-desc)**%s%s%s",
+                                    TextDisplay.of(String.format(
+                                            "**[Pull Requests](https://github.com/rh-hideout/pokeemerald-expansion/pulls?q=is%%3Apr+is%%3Aopen+sort%%3Acreated-desc)**%s%s%s",
                                             renderRecentIssue(recentPRList.get(0)),
                                             renderRecentIssue(recentPRList.get(1)),
-                                            renderRecentIssue(recentPRList.get(2))
-                                    )),
-                                    TextDisplay.of(String.format("**[Issues](https://github.com/rh-hideout/pokeemerald-expansion/issues?q=is%%3Aissue+is%%3Aopen+sort%%3Acreated-desc)**%s%s%s",
+                                            renderRecentIssue(recentPRList.get(2)))),
+                                    TextDisplay.of(String.format(
+                                            "**[Issues](https://github.com/rh-hideout/pokeemerald-expansion/issues?q=is%%3Aissue+is%%3Aopen+sort%%3Acreated-desc)**%s%s%s",
                                             renderRecentIssue(recentIssueList.get(0)),
                                             renderRecentIssue(recentIssueList.get(1)),
-                                            renderRecentIssue(recentIssueList.get(2))
-                                    )),
-                                    ActionRow.of(Button.primary("details:%s:%d".formatted(serverConfig.repo_name, timestamp), "Show details")),
-                                    TextDisplay.of(String.format("-# Written with ❤️ by Ninjdai • %s", new SimpleDateFormat("MM/dd/yy, K:m a").format(Date.from(Instant.now()))))
-                            )
-                    );
+                                            renderRecentIssue(recentIssueList.get(2)))),
+                                    ActionRow.of(
+                                            Button.primary("details:%s:%d".formatted(serverConfig.repo_name, timestamp),
+                                                    "Show details")),
+                                    TextDisplay.of(String.format("-# Written with ❤️ by Ninjdai • %s",
+                                            new SimpleDateFormat("MM/dd/yy, K:m a")
+                                                    .format(Date.from(Instant.now()))))));
 
             Details details = new Details();
-            for (GHIssue issue: allList) {
-                if (issue.getClosedAt() == null || issue.getCreatedAt() == null) continue;
-                long createdAt = issue.getCreatedAt().getTime()/1000;
-                long closedAt = issue.getClosedAt().getTime()/1000;
-                if (issue.isPullRequest()){
-                    if (createdAt > timestamp - Utils.Durations.DAY.duration) details.opened_pr_1++;
-                    if (createdAt > timestamp - Utils.Durations.WEEK.duration) details.opened_pr_7++;
-                    if (createdAt > timestamp - Utils.Durations.MONTH.duration) details.opened_pr_30++;
-                    if (createdAt > timestamp - Utils.Durations.YEAR.duration) details.opened_pr_365++;
+            for (GHIssue issue : allList) {
+                if (issue.getClosedAt() == null || issue.getCreatedAt() == null)
+                    continue;
+                long createdAt = issue.getCreatedAt().getTime() / 1000;
+                long closedAt = issue.getClosedAt().getTime() / 1000;
+                if (issue.isPullRequest()) {
+                    if (createdAt > timestamp - Utils.Durations.DAY.duration)
+                        details.opened_pr_1++;
+                    if (createdAt > timestamp - Utils.Durations.WEEK.duration)
+                        details.opened_pr_7++;
+                    if (createdAt > timestamp - Utils.Durations.MONTH.duration)
+                        details.opened_pr_30++;
+                    if (createdAt > timestamp - Utils.Durations.YEAR.duration)
+                        details.opened_pr_365++;
                     details.opened_pr_all++;
 
                     if (issue.getState() == GHIssueState.CLOSED) {
-                        if (closedAt > timestamp - Utils.Durations.DAY.duration) details.merged_pr_1++;
-                        if (closedAt > timestamp - Utils.Durations.WEEK.duration) details.merged_pr_7++;
-                        if (closedAt > timestamp - Utils.Durations.MONTH.duration) details.merged_pr_30++;
-                        if (closedAt > timestamp - Utils.Durations.YEAR.duration) details.merged_pr_365++;
+                        if (closedAt > timestamp - Utils.Durations.DAY.duration)
+                            details.merged_pr_1++;
+                        if (closedAt > timestamp - Utils.Durations.WEEK.duration)
+                            details.merged_pr_7++;
+                        if (closedAt > timestamp - Utils.Durations.MONTH.duration)
+                            details.merged_pr_30++;
+                        if (closedAt > timestamp - Utils.Durations.YEAR.duration)
+                            details.merged_pr_365++;
                         details.merged_pr_all++;
                     }
                 } else {
-                    if (createdAt > timestamp - Utils.Durations.DAY.duration) details.opened_issue_1++;
-                    if (createdAt > timestamp - Utils.Durations.WEEK.duration) details.opened_issue_7++;
-                    if (createdAt > timestamp - Utils.Durations.MONTH.duration) details.opened_issue_30++;
-                    if (createdAt > timestamp - Utils.Durations.YEAR.duration) details.opened_issue_365++;
+                    if (createdAt > timestamp - Utils.Durations.DAY.duration)
+                        details.opened_issue_1++;
+                    if (createdAt > timestamp - Utils.Durations.WEEK.duration)
+                        details.opened_issue_7++;
+                    if (createdAt > timestamp - Utils.Durations.MONTH.duration)
+                        details.opened_issue_30++;
+                    if (createdAt > timestamp - Utils.Durations.YEAR.duration)
+                        details.opened_issue_365++;
                     details.opened_issue_all++;
 
                     if (issue.getState() == GHIssueState.CLOSED) {
-                        if (closedAt > timestamp - Utils.Durations.DAY.duration) details.closed_issue_1++;
-                        if (closedAt > timestamp - Utils.Durations.WEEK.duration) details.closed_issue_7++;
-                        if (closedAt > timestamp - Utils.Durations.MONTH.duration) details.closed_issue_30++;
-                        if (closedAt > timestamp - Utils.Durations.YEAR.duration) details.closed_issue_365++;
+                        if (closedAt > timestamp - Utils.Durations.DAY.duration)
+                            details.closed_issue_1++;
+                        if (closedAt > timestamp - Utils.Durations.WEEK.duration)
+                            details.closed_issue_7++;
+                        if (closedAt > timestamp - Utils.Durations.MONTH.duration)
+                            details.closed_issue_30++;
+                        if (closedAt > timestamp - Utils.Durations.YEAR.duration)
+                            details.closed_issue_365++;
                         details.closed_issue_all++;
                     }
                 }
@@ -190,25 +222,25 @@ public class GithubHandler {
         Date lastUpdatedAt = new Date();
         try {
             lastUpdatedAt = issue.getUpdatedAt();
-        } catch (IOException ignored) {}
+        } catch (IOException ignored) {
+        }
         return String.format("\n* [#%d - %s](%s) | Last updated <t:%d:R>",
                 issue.getNumber(),
                 issue.getTitle().length() > 100 ? (issue.getTitle().substring(0, 100) + "...") : issue.getTitle(),
                 issue.getHtmlUrl().toString(),
-                (int) (lastUpdatedAt.getTime() / 1000)
-        );
+                (int) (lastUpdatedAt.getTime() / 1000));
     }
 
     public static String renderRecentIssue(GHIssue issue) {
         Date createdAt = new Date();
         try {
             createdAt = issue.getCreatedAt();
-        } catch (IOException ignored) {}
+        } catch (IOException ignored) {
+        }
         return String.format("\n* [#%d - %s](%s) | Created <t:%d:R>",
                 issue.getNumber(),
                 issue.getTitle().length() > 100 ? (issue.getTitle().substring(0, 100) + "...") : issue.getTitle(),
                 issue.getHtmlUrl().toString(),
-                (int) (createdAt.getTime() / 1000)
-        );
+                (int) (createdAt.getTime() / 1000));
     }
 }
